--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,14 +1,15 @@
 Package: ifctools
 Type: Package
 Title: Italian fiscal code miscellaneous utilities
-Version: 0.1
-Date: 2010-01-27
+Version: 0.2
+Date: 2014-05-22
 Author: Luca Braglia
 Maintainer: Luca Braglia <lbraglia@gmail.com>
-Depends: car
+Imports:
+    car
 Description: Provides utility fuctions to deal with italian
-             fiscal codes (check, "guess", ...)
+    fiscal codes (check, "guess", ...)
 License: GPL (>=2)
-URL: http://lbraglia.openedhost.com/fs.php#ifctools
+URL: http://github.com/lbraglia/ifctools
 Encoding: UTF-8
 LazyLoad: yes
