--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,15 +1,12 @@
 Package: ifctools
-Type: Package
-Title: Italian fiscal code miscellaneous utilities
-Version: 0.2
-Date: 2014-05-22
-Author: Luca Braglia
-Maintainer: Luca Braglia <lbraglia@gmail.com>
-Imports:
-    car
-Description: Provides utility fuctions to deal with italian
-    fiscal codes (check, "guess", ...)
-License: GPL (>=2)
+Title: Italian fiscal code ("codice fiscale") miscellaneous utilities
+Version: 0.1
+Date: 2015-01-31
+Authors@R: as.person('Luca Braglia <lbraglia@gmail.com> [aut, cre]')
+Description: Provides utility fuctions to deal with italian fiscal code
+             ("codice fiscale").
 URL: http://github.com/lbraglia/ifctools
-Encoding: UTF-8
-LazyLoad: yes
+BugReports: https://github.com/lbraglia/ifctools/issues
+Depends: R (>= 3.1.1)
+License: GPL-3
+LazyData: true
