--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,5 +1,5 @@
 Package: ifctools
-Title: Italian Fiscal Code ("Codice Fiscale") Miscellaneous Utilities
+Title: Italian Fiscal Code ("Codice Fiscale") Utilities
 Version: 0.2.1
 Date: 2015-05-10
 Authors@R: person("Luca", "Braglia", email = "lbraglia@gmail.com",
