--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -5,12 +5,11 @@ Authors@R: person("Luca", "Braglia", email = "lbraglia@gmail.com", role
         = c("aut", "cre"))
 Description: Provides utility functions to deal with Italian fiscal
     code ('codice fiscale').
-URL: http://github.com/lbraglia/ifctools
-BugReports: http://github.com/lbraglia/ifctools/issues
+URL: https://github.com/lbraglia/ifctools
+BugReports: https://github.com/lbraglia/ifctools/issues
 Depends:
     R (>= 3.1.1)
 License: GPL-3
-LazyData: true
 Suggests:
     testthat
 RoxygenNote: 7.1.1
